--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/common.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
+    <script type="text/javascript" src="http://y.gtimg.cn/music/h5/lib/js/music-1.0.min.js?max_age=604800"></script>
     <title>react-music-player</title>
   </head>
   <body>
